...
              'when something goes out, something else comes in.\n\n'
              'I also make custom pieces to order, so if\n'
              'you don\'t find quite what you\'re looking for,\n'
              'feel free to get in touch\n'
              '(with or without a reference image).',
        Translation.chineseCharacter => '泥',
        Translation.home => 'Home',
        Translation.pieces => 'Pieces',
        Translation.categories => 'Categories',
        Translation.collections => 'Collections',
        Translation.designs => 'Designs',
        Translation.contact => 'Contact',
        Translation.english => 'English',
        Translation.finnish => 'Finnish',
...
